[package]
name = "pingora-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
dashmap = "6.0.1"
env_logger = "0.11.3"
futures-util = "0.3.30"
http = "1.1.0"
instant-acme = "0.7.1"
log = "0.4.22"
once_cell = "1.19.0"
pingora = { version = "0.3.0", features = ["lb"] }
rand = "0.8.5"
rcgen = "0.13.1"
substring = "1.4.5"
tokio = "1.39.3"
